
- When closing a dockable panel, the DockableWindowUpdate.DEACTIVATED message is
  sent (#1075058) (Matthieu Casanova)

- ScrollLineCount was not calculated correctly (#1906288, #1868923)
  (Matthieu Casanova)
}}}
{{{ Miscellaneous

- In a directory search, if you use a regex, it is tested before, before listing
  files (#1556663) Matthieu Casanova

- Installer for *nix platforms - simplified startup script
    (#2098720 - Bernhard Walle)

- Center Caret On Screen now scrolls your document so your caret doesn't
  change. [ 1883809 - ezust ]

- [About jEdit] dialog is refined. It now performs smoother animation
  and fade out effect. (xlinuks)

- [Macros] Copying/cutting/moving/duplicating multiple vs.  single lines
    [ 1849180 - encorejane ]
    renamed Move_Line_(Down|Up) to Move_Lines_$1,
    renamed (Copy|Cut)_Selection_Or_Line to $1_Lines
    new macros: Duplicate_Lines_(Above|Below)

- The VFS Browser has a new command to paste a file.
  After copying the path name of a file, you can paste it in any folder to
  copy the file (Matthieu Casanova)

- When opening the search dialog if no text is selected the searched string will
  be filled with the previous entered string (feature #1500938) (Matthieu Casanova)

- The Activity Log option panel now have a textfield filter
  (feature #1593375) (Matthieu Casanova)

- In the plugin manager, a new panel shows detailed informations about the
  installed plugins (Matthieu Casanova)
}}}
{{{ Editing

- SF Bug #1853797: perl syntax highlighting: broken '\' after var interpolation
  The rule for matching literals was wrongly highlighting perl variables.
  Fix is to use the same rule used in the main rule set to match those
  variables. (Marcelo Vanzin)

- Handling of /regexp/ in ruby mode is refined. (Kazutoshi Satoda)

  NOTE: If a regexp begins with a whitespace (including a newline), the
  beginning "/" is wrongly treated as a division operator. But such regexp